# soroban-cli

./: Cargo.toml
cmd/soroban-cli/src/: serve.rs  utils.rs
cmd/soroban-cli/src/config/identity/: generate.rs
cmd/soroban-cli/src/contract/: bindings.rs  invoke.rs
cmd/soroban-rpc/lib/preflight/src/: lib.rs
src/: events.rs  logs.rs  main.rs  txmeta.rs
