[workspace]
resolver = "2"
members = [
    "cmd/soroban-cli",
    "cmd/soroban-cli/tests/fixtures/test-wasms/*",
    "cmd/soroban-rpc/lib/preflight",
]
default-members = ["cmd/soroban-cli"]

[workspace.dependencies.soroban-env-host]
version = "0.0.14"
git = "https://github.com/stellar/rs-soroban-env"
rev = "5695440da452837555d8f7f259cc33341fdf07b0"

[workspace.dependencies.soroban-spec]
path = "../rs-soroban-sdk/soroban-spec"

[workspace.dependencies.soroban-token-spec]
path = "../rs-soroban-sdk/soroban-token-spec"

[workspace.dependencies.soroban-sdk]
path = "../rs-soroban-sdk/soroban-sdk"

[workspace.dependencies.soroban-ledger-snapshot]
path = "../rs-soroban-sdk/soroban-ledger-snapshot"

[workspace.dependencies.stellar-strkey]
version = "0.0.7"

[workspace.dependencies.sep5]
version = "0.0.2"


# [patch."https://github.com/stellar/rs-soroban-env"]
# soroban-env-host = { path = "../rs-soroban-env/soroban-env-host/" }
[patch."https://github.com/stellar/rs-soroban-sdk"]
soroban-spec = { path = "../rs-soroban-sdk/soroban-spec/" }
soroban-token-spec = { path = "../rs-soroban-sdk/soroban-token-spec/" }
soroban-sdk = { path = "../rs-soroban-sdk/soroban-sdk/" }
soroban-ledger-snapshot = { path = "../rs-soroban-sdk/soroban-ledger-snapshot/" }
[patch."https://github.com/stellar/rs-stellar-xdr"]
stellar-xdr = { path = "../rs-stellar-xdr/" }

[profile.test-wasms]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-panic-unwind]
inherits = 'release'
panic = 'unwind'
